--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkgwlOy4DVHaL8eo0C4RjG",
+      "authorship_tag": "ABX9TyPN9WbJeN5IDZel8hG4Cs88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,7 +219,7 @@
         "id": "qNQIn91fGcsz",
         "outputId": "4159ba84-de63-468a-bb97-c6d56f6aa099"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -289,7 +289,7 @@
         "id": "D_CUHnODGu9b",
         "outputId": "c52f2ba2-3c2b-4779-facb-d8e78ae9e4ea"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -304,10 +304,42 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "A KeyError occurs when we try to look up a key in a dictionary, to get a value, but that key isn't in the dictionary."
+      ],
       "metadata": {
         "id": "VU8KJD5L6Wq4"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movies = {\n",
+        "    \"Mad Max\":{\n",
+        "        \"title\":\"Mad Max: Fury Road\",\n",
+        "        \"year\":2015,\n",
+        "        \"director\":\"George Miller\",\n",
+        "        \"cinematography\":\"John Seale\"\n",
+        "    },\n",
+        "    \"Home\":{\n",
+        "        \"title\":\"Home\",\n",
+        "        \"year\":2015,\n",
+        "        \"director\":\"Tim Johnson\"\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "for movie_title,movie_data in movies.items():\n",
+        "    title = movie_title\n",
+        "    director = movie_data['director']\n",
+        "    print(f\"The director of {title} was {director}.\")\n",
+        "    cinematographer = movie_data['cinematography']\n",
+        "    print(f\"Cinetmatography for {title} was done by {cinematographer}.\")"
+      ],
+      "metadata": {
+        "id": "rYN6gAdp3RRB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
