--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPN9WbJeN5IDZel8hG4Cs88",
+      "authorship_tag": "ABX9TyPw8mYT9VOCVx7AsLVCKdOe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,6 +337,42 @@
       ],
       "metadata": {
         "id": "rYN6gAdp3RRB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fixing the KeyError by checking if the key is there before accessing it.\n",
+        "\n",
+        "movies = {\n",
+        "\n",
+        "    \"Mad Max\":{\n",
+        "        \"title\":\"Mad Max: Fury Road\",\n",
+        "        \"year\":2015,\n",
+        "        \"director\":\"George Miller\",\n",
+        "        \"cinematography\":\"John Seale\"\n",
+        "    },\n",
+        "\n",
+        "    \"Home\":{\n",
+        "        \"title\":\"Home\",\n",
+        "        \"year\":2015,\n",
+        "        \"director\":\"Tim Johnson\"\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "for movie_title,movie_data in movies.items():\n",
+        "    title = movie_title\n",
+        "    director = movie_data['director']\n",
+        "    print(f\"The director of {title} was {director}.\")\n",
+        "    # If there is a cinematographer, then list it. (If there isn't one, and we try to access it, we get a KeyError.)\n",
+        "    if 'cinematography' in movie_data.keys():\n",
+        "        cinematographer = movie_data['cinematography']\n",
+        "        print(f\"Cinetmatography for {title} was done by {cinematographer}.\")"
+      ],
+      "metadata": {
+        "id": "klB_ywQl37ig"
       },
       "execution_count": null,
       "outputs": []
