--- a/23T0_PPF_Lecture_3.ipynb
+++ b/23T0_PPF_Lecture_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYmE06ytIIFcj0nsdW1zDr",
+      "authorship_tag": "ABX9TyMIczGxGYKp6+Zr2NFy3bLg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,13 +52,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vNHakXILyXty",
-        "outputId": "d2a4d153-f51b-4e6d-cedf-1fb13de3438e"
+        "outputId": "274f60fd-d44d-420e-e8ab-da8d3f788af9"
       },
       "outputs": [
         {
@@ -103,6 +103,41 @@
     {
       "cell_type": "code",
       "source": [
+        "# Can you sort a dictionary?\n",
+        "\n",
+        "movies_sorted = sorted(movies)\n",
+        "print(movies_sorted)\n",
+        "item_num = int(input(\"Which movie do you want to know the genre of? \"))\n",
+        "# Get the movie name from the sorted list based on the number\n",
+        "movie_they_want = movies_sorted[item_num]\n",
+        "# Use the movie name to get more information from the movie dictionary\n",
+        "info_they_want = movies[movie_they_want]\n",
+        "# Display the more information\n",
+        "print(info_they_want)"
+      ],
+      "metadata": {
+        "id": "_Ac9Nzcj8oxj",
+        "outputId": "a0d0f915-bb77-476e-a962-48284fd05958",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Arrival', 'Doctor Strange', 'Home', 'John Wick', 'Mad Max', 'Romeo and Juliet', 'Ted']\n",
+            "Which movie do you want to know the genre of? 3\n",
+            "Action\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(movies.keys())\n",
         "print(movies.values())"
       ],
@@ -113,7 +148,7 @@
         "id": "28Xs9UZN0sl8",
         "outputId": "648aca80-d925-4f1b-f4d6-fa092dd9215b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +173,7 @@
         "id": "eEgA676d03d4",
         "outputId": "85076fa9-308e-47a7-fc3d-8c0ea80b2203"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +202,7 @@
         "id": "2ofwdKTK1Y-b",
         "outputId": "9c36274c-8143-4793-ca48-7014df29c65b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +293,7 @@
         "id": "dqg-5CLn10Mt",
         "outputId": "2c7d2168-9269-4021-c73c-72e65f1182d5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,8 +351,194 @@
         "    }\n",
         "]"
       ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(houses)\n",
+        "print()\n",
+        "for house in houses:\n",
+        "    print(house)\n",
+        "print()\n",
+        "print(\"Only print addresses?\")\n",
+        "for house in houses:\n",
+        "    address = house[\"address\"]\n",
+        "    print(address)\n",
+        "\n",
+        "print()\n",
+        "print(\"What are the features?\")\n",
+        "for house in houses:\n",
+        "    print(house['features'])\n",
+        "\n",
+        "print()\n",
+        "print(\"Which houses have pools?\")\n",
+        "for house in houses:\n",
+        "    if \"pool\" in house['features']:\n",
+        "        print(house[\"address\"])\n",
+        "\n",
+        "print()\n",
+        "for house in houses:\n",
+        "    address = house[\"address\"]\n",
+        "    features = house[\"features\"]\n",
+        "    if \"pool\" in features:\n",
+        "        print(address)"
+      ],
+      "metadata": {
+        "id": "4WMUnPnv604t",
+        "outputId": "9c2cd3a2-8527-4bb9-b686-70ce0e2e4c66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'address': '42 Wallaby Way, Sydney', 'bedrooms': 3, 'bathrooms': 2, 'features': ['garage', 'pool']}, {'address': '123 Fake Street, Mosman', 'bedrooms': 6, 'bathrooms': 3, 'features': ['pool', 'granny flat']}, {'address': '1 High Street, Kensington', 'bedrooms': 2, 'bathrooms': 1, 'features': []}, {'address': '109 Kirribilli Ave, Kirribilli', 'bedrooms': 10, 'bathrooms': 7, 'features': ['garage', 'pool', 'wine cellar', 'tennis court']}]\n",
+            "\n",
+            "{'address': '42 Wallaby Way, Sydney', 'bedrooms': 3, 'bathrooms': 2, 'features': ['garage', 'pool']}\n",
+            "{'address': '123 Fake Street, Mosman', 'bedrooms': 6, 'bathrooms': 3, 'features': ['pool', 'granny flat']}\n",
+            "{'address': '1 High Street, Kensington', 'bedrooms': 2, 'bathrooms': 1, 'features': []}\n",
+            "{'address': '109 Kirribilli Ave, Kirribilli', 'bedrooms': 10, 'bathrooms': 7, 'features': ['garage', 'pool', 'wine cellar', 'tennis court']}\n",
+            "\n",
+            "Only print addresses?\n",
+            "42 Wallaby Way, Sydney\n",
+            "123 Fake Street, Mosman\n",
+            "1 High Street, Kensington\n",
+            "109 Kirribilli Ave, Kirribilli\n",
+            "\n",
+            "What are the features?\n",
+            "['garage', 'pool']\n",
+            "['pool', 'granny flat']\n",
+            "[]\n",
+            "['garage', 'pool', 'wine cellar', 'tennis court']\n",
+            "\n",
+            "Which houses have pools?\n",
+            "42 Wallaby Way, Sydney\n",
+            "123 Fake Street, Mosman\n",
+            "109 Kirribilli Ave, Kirribilli\n",
+            "\n",
+            "42 Wallaby Way, Sydney\n",
+            "123 Fake Street, Mosman\n",
+            "109 Kirribilli Ave, Kirribilli\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Since there is a dictionary in a list, how do we use the houses.append() if we had to add another house?"
+      ],
+      "metadata": {
+        "id": "nhww95g_9mLm"
+      },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(houses)\n",
+        "houses.append(\n",
+        "    { \n",
+        "        \"address\": \"9 Fitzpatrick St, North Bondi\", \n",
+        "        \"bedrooms\": 1, \n",
+        "        \"bathrooms\": 5, \n",
+        "        \"features\": [\"garage\", \"sauna\"] \n",
+        "    }\n",
+        ")\n",
+        "print(houses)"
+      ],
+      "metadata": {
+        "id": "n6mULmEx-JZk",
+        "outputId": "e0046191-b157-40e6-c27f-b5659271dab1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'address': '42 Wallaby Way, Sydney', 'bedrooms': 3, 'bathrooms': 2, 'features': ['garage', 'pool']}, {'address': '123 Fake Street, Mosman', 'bedrooms': 6, 'bathrooms': 3, 'features': ['pool', 'granny flat']}, {'address': '1 High Street, Kensington', 'bedrooms': 2, 'bathrooms': 1, 'features': []}, {'address': '109 Kirribilli Ave, Kirribilli', 'bedrooms': 10, 'bathrooms': 7, 'features': ['garage', 'pool', 'wine cellar', 'tennis court']}]\n",
+            "[{'address': '42 Wallaby Way, Sydney', 'bedrooms': 3, 'bathrooms': 2, 'features': ['garage', 'pool']}, {'address': '123 Fake Street, Mosman', 'bedrooms': 6, 'bathrooms': 3, 'features': ['pool', 'granny flat']}, {'address': '1 High Street, Kensington', 'bedrooms': 2, 'bathrooms': 1, 'features': []}, {'address': '109 Kirribilli Ave, Kirribilli', 'bedrooms': 10, 'bathrooms': 7, 'features': ['garage', 'pool', 'wine cellar', 'tennis court']}, {'address': '9 Fitzpatrick St, North Bondi', 'bedrooms': 1, 'bathrooms': 5, 'features': ['garage', 'sauna']}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "address = input(\"Enter address: \")\n",
+        "bedrooms = int(input(\"Num bedrooms: \"))\n",
+        "bathrooms = int(input(\"Num bathrooms: \"))\n",
+        "features = []\n",
+        "feature = input(\"Feature: (or . to stop) \")\n",
+        "while feature != '.':\n",
+        "    features.append(feature)\n",
+        "    feature = input(\"Feature: (or . to stop) \")\n",
+        "houses.append(\n",
+        "    {\n",
+        "        \"address\":address,\n",
+        "        \"bedrooms\":bedrooms,\n",
+        "        \"bathrooms\":bathrooms,\n",
+        "        \"features\":features\n",
+        "    }\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "ftUQhUcA-ciX",
+        "outputId": "f3031573-8c7a-4101-eb51-885a203f3bf1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter address: 6B Top of the Hill\n",
+            "Num bedrooms: 2\n",
+            "Num bathrooms: 1\n",
+            "Feature: (or . to stop) study\n",
+            "Feature: (or . to stop) movie theatre\n",
+            "Feature: (or . to stop) games room\n",
+            "Feature: (or . to stop) .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(houses)"
+      ],
+      "metadata": {
+        "id": "heYULPzI_DaJ",
+        "outputId": "c52536a4-8d65-422d-935f-40c94326ae13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'address': '42 Wallaby Way, Sydney', 'bedrooms': 3, 'bathrooms': 2, 'features': ['garage', 'pool']}, {'address': '123 Fake Street, Mosman', 'bedrooms': 6, 'bathrooms': 3, 'features': ['pool', 'granny flat']}, {'address': '1 High Street, Kensington', 'bedrooms': 2, 'bathrooms': 1, 'features': []}, {'address': '109 Kirribilli Ave, Kirribilli', 'bedrooms': 10, 'bathrooms': 7, 'features': ['garage', 'pool', 'wine cellar', 'tennis court']}, {'address': '9 Fitzpatrick St, North Bondi', 'bedrooms': 1, 'bathrooms': 5, 'features': ['garage', 'sauna']}, {'address': '6B Top of the Hill', 'bedrooms': 2, 'bathrooms': 1, 'features': ['study', 'movie theatre', 'games room']}]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
