--- a/23T0_PPF_Lecture_3.ipynb
+++ b/23T0_PPF_Lecture_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIczGxGYKp6+Zr2NFy3bLg",
+      "authorship_tag": "ABX9TyN/JIYhzqUOJS9Ekme//RPd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DyUHH3tCBQSa"
+        "id": "DyUHH3tCBQSa",
+        "outputId": "b3256dc4-2c9e-44a9-9c9d-15a656b61af8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "houses = [\n",
@@ -343,16 +347,96 @@
         "        \"bathrooms\": 1, \n",
         "        \"features\": [] \n",
         "    },\n",
-        "    { \n",
+        "    {\n",
         "        \"address\": \"109 Kirribilli Ave, Kirribilli\", \n",
         "        \"bedrooms\": 10, \n",
         "        \"bathrooms\": 7, \n",
         "        \"features\": [\"garage\", \"pool\", \"wine cellar\", \"tennis court\"] \n",
         "    }\n",
-        "]"
+        "]\n",
+        "\n",
+        "# Write some code (we will turn it into a function later) which creates a list of \n",
+        "# addresses which have at least 3 bedrooms, 2 bathrooms and a garage and a pool.\n",
+        "\n",
+        "# Step 1: at least that number of bedrooms\n",
+        "# Step 2: at least that number of bathrooms\n",
+        "# Step 3: consider the list of features\n",
+        "desired_bedrooms = 3\n",
+        "desired_bathrooms = 2\n",
+        "desired_features = [\"garage\", \"pool\"]\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['42 Wallaby Way, Sydney', '109 Kirribilli Ave, Kirribilli']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_houses(houses, desired_bedrooms, desired_bathrooms, desired_features):\n",
+        "    suitable_addresses = []\n",
+        "    for house in houses:\n",
+        "        house_address = house[\"address\"]\n",
+        "        num_bedrooms = house[\"bedrooms\"]\n",
+        "        num_bathrooms = house[\"bathrooms\"]\n",
+        "        house_features = house[\"features\"]\n",
+        "        if num_bedrooms >= desired_bedrooms and num_bathrooms >= desired_bathrooms:\n",
+        "            # If ALL the desired features, are in the house's features, then it is suitable\n",
+        "            # Assume it's suitable, but then, if ANY of the desired features, aren't in the\n",
+        "            # house's features, then it's NOT suitable\n",
+        "            suitable = True\n",
+        "            for feature in desired_features:\n",
+        "                if feature not in house_features:\n",
+        "                    suitable = False\n",
+        "\n",
+        "            # At this point, bedrooms and bathrooms are checked.\n",
+        "            # If we came across any desired feature, which wasn't in the list of\n",
+        "            # features for the house, then suitable would be False. \n",
+        "            if suitable == True:\n",
+        "                suitable_addresses.append(house_address)\n",
+        "    return suitable_addresses"
+      ],
+      "metadata": {
+        "id": "RsOZ4EzZtMxC"
+      },
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_options = find_houses(houses, 3, 2, [\"garage\", \"pool\"])\n",
+        "print(my_options)\n",
+        "my_options = find_houses(houses, 1, 1, [])\n",
+        "print(my_options)"
+      ],
+      "metadata": {
+        "id": "Df3KVLCZtrBH",
+        "outputId": "e38a8e04-e951-4dcc-c259-e3f9ec9cd259",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['42 Wallaby Way, Sydney', '109 Kirribilli Ave, Kirribilli']\n",
+            "['42 Wallaby Way, Sydney', '123 Fake Street, Mosman', '1 High Street, Kensington', '109 Kirribilli Ave, Kirribilli']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -392,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +545,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +584,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -529,7 +613,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,8 +664,46 @@
         "assert find_houses(houses, 6, 4, []) == [\"109 Kirribilli Ave, Kirribilli\"]\n",
         "assert find_houses(houses, 1, 1, [\"granny flat\"]) == [\"123 Fake Street, Mosman\"]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Do we always need to use return?\n",
+        "Eg print a line of n *. Where n passed in as a parameter."
+      ],
+      "metadata": {
+        "id": "t2U68vs0wYGo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_asterisks(n):\n",
+        "    print(\"*\"*n)\n",
+        "\n",
+        "print_asterisks(72)\n",
+        "\n",
+        "# Extra task: replace line 2 with a while loop to do the same job."
+      ],
+      "metadata": {
+        "id": "YVz3XNPFwa6t",
+        "outputId": "226e20b9-b0f9-464c-d507-51d4773058d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "************************************************************************\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
