--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPw8mYT9VOCVx7AsLVCKdOe",
+      "authorship_tag": "ABX9TyM43zJBjZHxbUUAJT7bfVDt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,6 +373,35 @@
       ],
       "metadata": {
         "id": "klB_ywQl37ig"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Web Apps Errors"
+      ],
+      "metadata": {
+        "id": "smLfKm9TEbmD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AssertionError: View function mapping is overwriting an existing endpoint function: homepage\n",
+        "\n",
+        "This means that we have 2 functions in our web app, both called homepage."
+      ],
+      "metadata": {
+        "id": "cTAIuquUEfJ_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jj0E-LKaEeMS"
       },
       "execution_count": null,
       "outputs": []
