--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM43zJBjZHxbUUAJT7bfVDt",
+      "authorship_tag": "ABX9TyN7Ry5T4nLXfVJB6L0S6iH+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -395,6 +395,18 @@
       ],
       "metadata": {
         "id": "cTAIuquUEfJ_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TypeError\n",
+        "TypeError: The view function for 'homepage' did not return a valid response. The function either returned None or ended without a return statement.\n",
+        "\n",
+        "Solution: Make sure your function returns a string. (With the html for your browser to display.)"
+      ],
+      "metadata": {
+        "id": "X4jW1ytFJB0V"
       }
     },
     {
