--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7Ry5T4nLXfVJB6L0S6iH+",
+      "authorship_tag": "ABX9TyOXzGmHVFOTHTMlbTHpWg7Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -410,13 +410,63 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Error:\n",
+        "\n",
+        "Not Found\n",
+        "The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.\n",
+        "\n",
+        "Solution:\n",
+        "Check the route you're going to, and check it's spelled the same as the route in your file. Also, check you haven't forgotten the @ before app."
+      ],
+      "metadata": {
+        "id": "wwH3z_Z2DpNu"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "@app.route('/')\n",
+        "def homepage():\n",
+        "    response = html(\n",
+        "        body(\n",
+        "            h1(\"Jewellery Recommendations\"),\n",
+        "            form(\n",
+        "                label(for_=\"name_tb\")(\"Name: \"),\n",
+        "                input_(type=\"text\", id=\"name_tb\"),\n",
+        "                # A button, when clicked, goes to display_recommendations\n",
+        "                input_(type=\"submit\", formaction=\"/display_recommendations\") # <---- this line, the formaction\n",
+        "            )\n",
+        "        )\n",
+        "    )\n",
+        "    return str(response)\n",
+        "\n",
+        "@app.route('/display_recommendations') # <---- needs to match this line (spelling etc, and the @ at the start of the line)\n",
+        "def recommendations():\n",
+        "    return \"\""
+      ],
       "metadata": {
         "id": "jj0E-LKaEeMS"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Error:\n",
+        "\n",
+        "Method Not Allowed\n",
+        "The method is not allowed for the requested URL.\n",
+        "\n",
+        "Solution:\n",
+        "\n",
+        "Ensure that the methods (set on the @app.route line) are \"GET\" and/or \"POST\" as you need them."
+      ],
+      "metadata": {
+        "id": "Wy7qBsqjEDTQ"
+      }
     }
   ]
 }
