--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -85,7 +85,9 @@
         "id": "H7OrkuYWPf59"
       },
       "source": [
-        "## Demonstration of feasibility\n",
+        "## Implement First Stage of MVP\n",
+        "\n",
+        "## TODO fix this up\n",
         "\n",
         "* *Describe a core feature of your application.*\n",
         "* *Provide a demonstration of how that feature may work in the code cell below (you can add further code cells if you wish).*\n",
